do not stop on failure

--- a/.azure-pipelines/baseline_test/baseline.test.template.yml
+++ b/.azure-pipelines/baseline_test/baseline.test.template.yml
@@ -24,6 +24,7 @@ jobs:
       MGMT_BRANCH: "master"
       BUILD_REASON: "BaselineTest"
       RETRY_TIMES: "0"
+      STOP_ON_FAILURE: "False"
 
 - job: t0_2vlans_elastictest
   displayName: "kvmtest-t0-2vlans by Elastictest"
@@ -44,6 +45,7 @@ jobs:
       MGMT_BRANCH: "master"
       BUILD_REASON: "BaselineTest"
       RETRY_TIMES: "0"
+      STOP_ON_FAILURE: "False"
 
 - job: t1_lag_elastictest
   displayName: "kvmtest-t1-lag by Elastictest"
@@ -62,6 +64,7 @@ jobs:
       MGMT_BRANCH: "master"
       BUILD_REASON: "BaselineTest"
       RETRY_TIMES: "0"
+      STOP_ON_FAILURE: "False"
 
 - job: dualtor_elastictest
   displayName: "kvmtest-dualtor-t0 by Elastictest"
@@ -81,6 +84,7 @@ jobs:
         MGMT_BRANCH: "master"
         BUILD_REASON: "BaselineTest"
         RETRY_TIMES: "0"
+        STOP_ON_FAILURE: "False"
 
 - job: multi_asic_elastictest
   displayName: "kvmtest-multi-asic-t1-lag by Elastictest"
@@ -101,6 +105,7 @@ jobs:
         MGMT_BRANCH: "master"
         BUILD_REASON: "BaselineTest"
         RETRY_TIMES: "0"
+        STOP_ON_FAILURE: "False"
 
 - job: sonic_t0_elastictest
   displayName: "kvmtest-t0-sonic by Elastictest"
@@ -122,6 +127,7 @@ jobs:
         MGMT_BRANCH: "master"
         BUILD_REASON: "BaselineTest"
         RETRY_TIMES: "0"
+        STOP_ON_FAILURE: "False"
 
 - job: dpu_elastictest
   displayName: "kvmtest-dpu by Elastictest"
@@ -140,3 +146,4 @@ jobs:
         MGMT_BRANCH: "master"
         BUILD_REASON: "BaselineTest"
         RETRY_TIMES: "0"
+        STOP_ON_FAILURE: "False"
