[GCU E2E Testing] Temporarily Skip RDMA Tests on 202205 (#10917)
What is the motivation for this PR?
202205 sonic-utilities PR sonic-net/sonic-utilities#3051 changed GCU behavior for certain RDMA use cases. This change requires updates to GCU RDMA E2E test cases that are done in this open PR: #10836

I opened this PR to temporarily skip these test cases on 202205 until the new 202205 image including sonic-utilities PR 3051 changes is used in testing, at which point sonic-mgmt PR 10836 can be merged. This is so that there is no overlap between outdated sonic-mgmt test cases and the updated SONiC image

--- a/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
+++ b/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
@@ -460,6 +460,7 @@ generic_config_updater/test_ecn_config_update.py::test_ecn_config_updates:
   skip:
     reason: "M0 and Mx don't support ecn config update"
     conditions:
+      - "branch in ['internal-202205']" #TODO- remove this when sonic-mgmt PR 10836 is merged
       - "topo_type in ['m0', 'mx']"
 
 generic_config_updater/test_eth_interface.py::test_replace_fec:
@@ -492,7 +493,14 @@ generic_config_updater/test_incremental_qos.py::test_incremental_qos_config_upda
   skip:
     reason: "This test was not run on this hwsku type currently"
     conditions:
+      - "branch in ['internal-202205']" #TODO- remove this when sonic-mgmt PR 10836 is merged
       - "not any(i in hwsku for i in ['2700', 'Arista-7170-64C', 'montara', 'newport'])"
+
+generic_config_updater/test_mmu_dynamic_threshold_config_update.py::test_dynamic_th_config_updates:
+  skip:
+    reason: "This test behavior to be modified in 202205"
+    conditions:
+      - "branch in ['internal-202205']" #TODO- remove this when sonic-mgmt PR 10836 is merged
 
 generic_config_updater:
   skip:
@@ -500,10 +508,17 @@ generic_config_updater:
     conditions:
       - "'t2' in topo_name"
 
+generic_config_updater/test_pfcwd_interval.py:
+  skip:
+    reason: "This test behavior to be modified in 202205"
+    conditions:
+      - "branch in ['internal-202205']" #TODO- remove this when sonic-mgmt PR 10836 is merged
+
 generic_config_updater/test_pfcwd_status.py:
   skip:
     reason: "PFC watchdog is not supported on M0/Mx topology"
     conditions:
+      - "branch in ['internal-202205']" #TODO- remove this when sonic-mgmt PR 10836 is merged
       - "topo_type in ['m0', 'mx']"
 
 #######################################
