modify condition in yml file
Signed-off-by: Zhaohui Sun <zhaohuisun@microsoft.com>

--- a/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
+++ b/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
@@ -416,8 +416,7 @@ ecmp/test_ecmp_sai_value.py:
     conditions:
       - "topo_type not in ['t1']"
       - "asic_type not in ['broadcom']"
-      - "branch in ['internal-202305']"
-      - "release in ['202305']"
+      - "release not in ['202305']"
       - "build_version.split('.')[1].isdigit() and int(build_version.split('.')[1]) <= 10"
 
 ecmp/test_fgnhg.py:
